
 CHANGES
*********

v1.2.0 (xx-xx-2024):
- Configuration to database
- Sidebar treeview

v1.1.5 (25-11-2023):
- Manage users in groups screen
- Add GUI hints
- Add unsaved changes notifications
- Add HTML entity coding on text inputs
- Full backend refactoring
- Fix versioning

v1.1.4 (12-10-2023):
- Full frontend refactoring
- Replace jsonForm plugin
- Revise loading

v1.1.3 (17-06-2023):
- Add groups with ACL's
- Fix type order
- Logs limited to SA
- Update documentation

v1.1.2 (10-05-2023):
- Polish module structure
- Replace datatables plugin
- Restructure tabs
- Update Build identifier (remove time)
- Polish source files (trim, permissions)
- Table sorting
- Add ChangeLog

v1.1.1 (01-04-2023):
- Comments & Documentation

v1.0.0 (31-03-2023):
- Initial commit