@@ -27,12 +27,12 @@ frm['titlebar'] = {
     'icusr': [15, {
       "Logout"      : function() { $.when(api('delete', 'auth')).always(function() { if (change.check()) { state.forget(); location.reload(true); } }); }
     }],
-    'iccnf': [45, {      
+    'iccnf': [45, {
       "Users"       : function() { mod.user.list(); },
-      "Groups"      : function() { mod.group.list(); },       
+      "Groups"      : function() { mod.group.list(); },
       "Configuration" : function() { mod.config.list(); },
       "Value maps"  : function() { mod.valuemap.list(); },
-      "Object types": function() { mod.objconf.list(); },      
+      "Object types": function() { mod.objconf.list(); },
     }],
   },
 
