@@ -146,8 +146,8 @@ mod['objconf'] = {
     // Form
     let obtform = new obForm([
       { id:'name',  name:'Name', type:'string', regex_validate:/^.+/, value:api_conf.name },
-      { id:'map', name:'Map', type:'select', options:maps, value:(api_conf.map==null)?'null':api_conf.map },
       { id:'short', name:'Shortname length', regex_validate:/^.+/, type:'select', options:{1:1, 2:2, 3:3, 4:4}, value:api_conf.short, info:'Number of fields used in shortname, used in e.g. dropdown selects'},
+      { id:'map', name:'Map', type:'select', options:maps, value:(api_conf.map==null)?'null':api_conf.map },
       { id:'log',   name:'Log', type:'select',  options:{0:'Disabled', 1:'Enabled'}, value:(api_conf.log)?1:0 },
     ]);
 
@@ -160,7 +160,7 @@ mod['objconf'] = {
     }
     $.each(api_property, function(idx, rec) {
       api_property[idx].htname  = api_property[idx].name;
-      api_property[idx].httype  = mod.objconf.options.type[api_property[idx].type];
+      api_property[idx].httype  = def.property[api_property[idx].type];
       api_property[idx].httable = htbool(api_property[idx].tbl_visible);
       api_property[idx].htform  = htbool(api_property[idx].frm_visible);
     });
@@ -197,6 +197,28 @@ mod['objconf'] = {
       }
     });
 
+    // Relations
+    let relations = [];
+    $.each(mod.objconf.objtypes, function(idx, rel) {
+      rel['allow'] = $('<input/>', { type:'checkbox', class:'nomrg', checked:($.inArray(rel.id, apidata.relations) != -1) });
+      relations[idx] = rel;
+    });
+
+    let rellist = new obFTable({
+      table: {
+        id: 'f99e38e642bf80c28f53e6358615669a',
+        data: relations,
+        columns: [
+          { id:'name', name:'Name' },
+          { id:'allow', name:'Allow' }
+        ],
+        columns_resizable: true,
+        columns_hidden: ['id'],
+        columns_allowhtml: ['allow' ]
+      },
+      search: true
+    });
+
     // Access
     for (let i=0; i<api_acl.length; i++) {
       api_acl[i]['read']   = $('<input/>', { type:'checkbox', class:'nomrg', checked:api_acl[i]['read'] });
@@ -227,6 +249,7 @@ mod['objconf'] = {
     let obtabs = new obTabs({ tabs:[
       { title:'Object Type', html:obtform.html() },
       { title:'Properties',  html:$('<div/>', { class:'content-tab-wrapper' }).append(proplist.html()) },
+      { title:'Relations',   html:$('<div/>', { class:'content-tab-wrapper' }).append(rellist.html()) },
       { title:'Access',      html:$('<div/>', { class:'content-tab-wrapper' }).append(acclist.html()) },
     ] });
 
@@ -243,7 +266,7 @@ mod['objconf'] = {
           let obtform_data = obtform.validate();
           if (obtform_data != null) {
             change.reset();
-            mod.objconf.save(id, obtform_data, proplist.table(), acclist.table());
+            mod.objconf.save(id, obtform_data, proplist.table(), rellist.table(), acclist.table());
           }
           else {
             obtabs.showtab('_obTab0');
@@ -280,7 +303,7 @@ mod['objconf'] = {
    *   config   : Config fields (first tab)
    *   ptable   : Properties table (second tab)
    ******************************************************************/
-  save: function(id, objtype_config, proplist, acclist) {
+  save: function(id, objtype_config, proplist, rellist, acclist) {
 
     // Loader
     content.append(loader.removeClass('fadein').addClass('fadein'));
@@ -299,6 +322,13 @@ mod['objconf'] = {
         }
       });
     }
+
+    dtsave['relations'] = [];
+    $.each(rellist.html().find('tbody').children('tr'), function(idx, tr) {
+      if ($(tr.cells[1]).find('input').prop('checked')) {
+        dtsave.relations = [...dtsave.relations, JSON.parse($(tr).attr('hdt')).id ];
+      }
+    });
 
     let aclsave = [];
     $.each(acclist.html().find('tbody').children('tr'), function(idx, tr) {
@@ -340,23 +370,6 @@ mod['objconf'] = {
   properties: {
 
     /******************************************************************
-     * mod.objconf.properties.form
-     * ==================
-     * Array for generating the properties form
-     ******************************************************************/
-    // form: {
-    //   schema: {
-    //     name:   {title:'Name', type:'string' },
-    //     type:   {title:'Type', type:'string', enum:[], info:'Cannot be changed after save' },
-    //     tsrc:   {title:'Source', type:'select', enum:[], info:'Cannot be changed after save' },
-    //     reqr:   {title:'Required', type:'select', enum:[], info:'Enable when field cannot be empty' },
-    //     table:  {title:'Display in Table', type:'string', enum:[] },
-    //     form:   {title:'Display on Form', type:'string', enum:[] }
-    //   },
-    //   form: ['*']
-    // },
-
-    /******************************************************************
      * mod.objconf.properties.open(ptable)
      * ==================
      * Open the properties form
@@ -374,7 +387,7 @@ mod['objconf'] = {
       }
       let propform = new obForm([
         {id:'name', name:'Name', type: 'string', regex_validate:/^.+/, value:rdata.name },
-        {id:'type', name:'Type', type: 'select', regex_validate:/^.+/, options: def.property, value:rdata.type, readonly:(!newrec&&rdata.id!=null), info:'Cannot be changed after save' },
+        {id:'type', name:'Type', type: 'select', regex_validate:/^.+/, options: def.property, value:rdata.type, readonly:(!newrec&&rdata.id!=null), info:'Cannot be changed after save. For more info on types see documentation' },
         {id:'tsrc', name:'Source', type: 'select', readonly:(!newrec&&rdata.id!=null), info:'Cannot be changed after save' },
         {id:'reqr', name:'Required', type: 'select', options: { 0:'No', 1:'Yes' }, value:(rdata.required)?1:0, info:'Enable when field cannot be empty' },
         {id:'table', name:'Display in Table', type: 'select', options: { 1:'Show', 2:'Show - Sortable', 9:'Hide' }, value:(rdata.tbl_visible)?((rdata.tbl_orderable)?2:1):9 },
